force-app/main/default/objects/Decision__c/Decision__c.object-meta.xml
<CustomObject>
    <description>All decision taken and forwardings of a meeting.</description>
    <label>Decision</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>