force-app/main/default/objects/Decision__c/fields/AttendeeId__c.field-meta.xml
<CustomField>
    <fullName>AttendeeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>Attendee__c</referenceTo>
    <relationshipLabel>Action Point Accountable</relationshipLabel>
    <relationshipName>AttendeeOfDecision</relationshipName>
    <type>Lookup</type>
</CustomField>