force-app/main/default/objects/Decision__c/fields/ConnectedField__c.field-meta.xml
<CustomField>
    <fullName>ConnectedField__c</fullName>
    <formula>HYPERLINK(Url__c, LinkName__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>