force-app/main/default/objects/Decision__c/fields/MeetingId__c.field-meta.xml
<CustomField>
    <fullName>MeetingId__c</fullName>
    <description>Id of the meeting</description>
    <label>Meeting</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipLabel>Decisions Of Meeting</relationshipLabel>
    <relationshipName>DecisionsOfMeeting</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>