force-app/main/default/objects/Decision__c/fields/MinutesId__c.field-meta.xml
<CustomField>
    <fullName>MinutesId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Minutes Item</label>
    <referenceTo>Minutes__c</referenceTo>
    <relationshipLabel>Decisions Of Minutes</relationshipLabel>
    <relationshipName>DecisionsOfMinutes</relationshipName>
    <type>Lookup</type>
</CustomField>