force-app/main/default/objects/Decision__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Id</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity from Meeting Decision</relationshipLabel>
    <relationshipName>OpportunityOfDecision</relationshipName>
    <type>Lookup</type>
</CustomField>