force-app/main/default/objects/Decision__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MeetingId__c</columns>
    <columns>MinutesId__c</columns>
    <columns>Description__c</columns>
    <columns>AttendeeId__c</columns>
    <columns>Action__c</columns>
    <columns>ActionStatus__c</columns>
    <columns>DueDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>